<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_contact_us_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:padding="@dimen/ten_dp_margin"
        android:text="@string/app_name"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_header"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_contact_us_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_contact_us_header"
        android:layout_centerInParent="true"
        android:padding="@dimen/ten_dp_margin"
        android:text="@string/alert_dilaog_contact_us_message"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/et_contact_us_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_below="@+id/tv_contact_us_message"
        android:hint="@string/dialog_contact_us_email_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_contact_us_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_contact_us_email"
        android:layout_marginLeft="@dimen/ten_dp_margin"
        android:layout_marginRight="@dimen/ten_dp_margin"
        android:layout_marginTop="@dimen/margin_five"
        android:hint="@string/dialog_contact_us_phone_hint"
        android:inputType="phone" />


    <MultiAutoCompleteTextView
        android:id="@+id/et_contact_us_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_contact_us_phone"
        android:layout_marginLeft="@dimen/ten_dp_margin"
        android:layout_marginRight="@dimen/ten_dp_margin"
        android:layout_marginTop="@dimen/margin_five"
        android:hint="@string/dialog_contact_us_message" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_contact_us_message"
        android:layout_centerInParent="true"
        android:layout_marginRight="@dimen/margin_fifteen"
        android:layout_marginTop="@dimen/ten_dp_margin"
        android:gravity="right"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/tv_otp_dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp_margin"
            android:text="@string/send"
            android:textColor="@android:color/holo_blue_bright" />

        <TextView
            android:id="@+id/tv_otp_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp_margin"
            android:text="@string/cancel"
            android:textColor="@android:color/holo_blue_bright" />
    </LinearLayout>
</RelativeLayout>