<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_rect_shape">

    <TextView
        android:id="@+id/tv_otp_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:padding="@dimen/ten_dp_margin"
        android:text="@string/app_name"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_header"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_otp_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_otp_header"
        android:layout_centerInParent="true"
        android:padding="@dimen/ten_dp_margin"
        android:text="@string/alert_dialog_otp_message"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/et_otp_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_otp_message"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/ten_dp_margin"
        android:inputType="numberDecimal"
        android:paddingLeft="@dimen/margin_fifteen"
        android:paddingRight="@dimen/margin_fifteen" />

    <LinearLayout
        android:id="@+id/ll_spinner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_otp_value"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:visibility="gone"
        android:layout_margin="@dimen/ten_dp_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_dialog_device_type"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_normal"
            android:layout_marginRight="@dimen/ten_dp_margin"
            android:textStyle="normal" />

        <Spinner
            android:id="@+id/spinner_device_type"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"></Spinner>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_spinner_container"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/ten_dp_margin"
        android:gravity="right">

        <TextView
            android:id="@+id/tv_otp_dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp_margin"
            android:text="@string/ok"
            android:textColor="@android:color/holo_blue_bright" />

        <TextView
            android:id="@+id/tv_otp_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp_margin"
            android:text="@string/cancel"
            android:textColor="@android:color/holo_blue_bright" />
    </LinearLayout>
</RelativeLayout>